<resources>
    <string name="app_name">MVVMLogin</string>
    <string name="forget_password">forget password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="do_not_have_acount">Don\'t have an account?</string>
    <string name="log_in_with_facebook">Log In With FaceBook</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="logo">logo</string>
</resources>
