<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".auth.LoginActivity">
    <data>
        <variable
                name="loginViewModel"
                type="com.example.mvvmlogin.auth.LoginViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        >
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="24dp"
            android:id="@+id/guideline_left"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline_right"
            app:layout_constraintGuide_end="24dp"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_lock_open"
            android:id="@+id/imageView"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
    />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/login_form_details"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/login_form_details"
                android:ems="10"
                android:background="@drawable/input_background"
                android:padding="16dp"
                android:textSize="14sp"
                android:text="@={loginViewModel.username}"
                android:id="@+id/editText_username"
                android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/login_form_details"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            android:id="@+id/textInputLayout">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/login_form_details"
                android:autofillHints="@string/password"
                android:text="@={loginViewModel.password}"
                android:ems="10"
                android:textSize="14sp"
                android:background="@drawable/input_background"
                android:padding="16dp"
                android:id="@+id/editText_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:id="@+id/button_login"
            android:layout_marginTop="20dp"
            android:onClick="@{()->loginViewModel.clickLogIn()}"
            android:textColor="@color/login_form_details"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>
    <TextView
            android:text="@string/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@color/login_form_details"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            android:layout_marginTop="10dp"/>

    <View
            android:id="@+id/footer_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="50dp"
            android:background="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_have_acount"
            android:textColor="@color/login_form_details"
            android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/footer_line"
            android:layout_marginTop="17dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_signup"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/facebook_login"/>
    <TextView
            android:text="@string/log_in_with_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/facebook_login"
            android:textColor="@color/login_form_details"
            android:drawableLeft="@drawable/ic_facebook"
            android:textStyle="bold"
            android:drawablePadding="10dp"
            android:paddingTop="2dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/footer_line"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/login_form_details"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/facebook_login"/>

    <View
            android:id="@+id/line1"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="@color/login_form_details_medium"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@+id/or"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/login_form_details"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/line1"
            app:layout_constraintTop_toTopOf="@+id/line1"
            app:layout_constraintEnd_toStartOf="@+id/line2"
            app:layout_constraintStart_toEndOf="@+id/line1"/>

    <View
            android:id="@+id/line2"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@color/login_form_details_medium"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/or"
            app:layout_constraintTop_toTopOf="@+id/or"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>