<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".auth.RegisterActivity">
    <data>
        <variable
                name="registerViewModel"
                type="com.example.mvvmlogin.auth.RegisterViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">

    <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="24dp"
            android:id="@+id/guideline_left"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_right"
            app:layout_constraintGuide_end="24dp"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_lock_open"
            android:id="@+id/imageView_logo"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/logo"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/login_form_details"
            app:layout_constraintTop_toBottomOf="@+id/imageView_logo"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textColor="@color/login_form_details"
                android:background="@drawable/input_background"
                android:padding="16dp"
                android:textSize="14sp"
                android:text="@={registerViewModel.username}"
                android:id="@+id/editText_username"
                android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            android:textColorHint="@color/login_form_details"
            android:id="@+id/textInputLayout">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="@string/password"
                android:textColor="@color/login_form_details"
                android:ems="10"
                android:background="@drawable/input_background"
                android:padding="16dp"
                android:textSize="14sp"
                android:text="@={registerViewModel.password}"
                android:id="@+id/editText_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            android:id="@+id/textInputLayout2"
            app:layout_constraintHorizontal_bias="1.0"
            android:textColorHint="@color/login_form_details"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/confirm_password"
                android:inputType="textPassword"
                android:background="@drawable/input_background"
                android:padding="16dp"
                android:hint="@string/confirm_password"
                android:text="@={registerViewModel.confirm_password}"
                android:textColor="@color/login_form_details"
                android:ems="10"
                android:textSize="14sp"
                android:id="@+id/editText_conf_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/login_form_details"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textColor="@color/login_form_details"
                android:background="@drawable/input_background"
                android:padding="16dp"
                android:textSize="14sp"
                android:id="@+id/editText_email"
                android:text="@={registerViewModel.email}"
                android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/register"
            android:background="@drawable/button_background"
            android:textColor="@color/login_form_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()->registerViewModel.onClickRegister()}"
            android:id="@+id/button" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"/>

    <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>